Add support for dark and light theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </script>
   </head>
-  <body>
+  <body class="{{ site.theme }}-theme">
     <textarea id="source">
 {% include templates.md %}
 ---
